fix rtl version

--- a/fa.html
+++ b/fa.html
@@ -1,4 +1,4 @@
-<html dir="rtl" lang="fa-IR" xmlns="http://www.w3.org/1999/xhtml">
+<html dir="ltr" lang="fa-IR" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 
@@ -11,14 +11,8 @@
     <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css" />
     <link rel="stylesheet" type="text/css"
         href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700,400italic|PT+Serif:400,400italic" />
-
-
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
-    <!--[if IEMobile]> 
-    <link rel="stylesheet" type="text/css" href="css/iemobile.css"/>
-    <![endif]-->
-
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.easytabs.min.js"></script>
     <script type="text/javascript" src="js/respond.min.js"></script>
@@ -29,10 +23,6 @@
     <script type="text/javascript" src="js/jquery.carouFredSel.js"></script>
     <script type="text/javascript" src="js/plugins.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
-
-    <!--[if lt IE 9]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -74,8 +64,10 @@
                 <div class="about">
                     <div class="photo-inner">
                         <ul>
-                            <li><img src="images/photo1.png" height="186" width="153" /></li>
-                            <li><img src="images/photo.jpg" height="186" width="153" /></li>
+                            <li style="margin-right: 19px !important;"><img src="images/photo1.png" height="186"
+                                    width="153" /></li>
+                            <li style="margin-right: 19px !important;"><img src="images/photo.jpg" height="186"
+                                    width="153" /></li>
                         </ul>
                     </div>
                     <h1>جواد نصراللهی</h1>
@@ -89,9 +81,9 @@
                     <li><label>نام</label><span>جواد نصراللهی</span></li>
                     <li><label>تاریخ تولد</label><span>12 تیر 1368</span></li>
                     <li><label>آدرس</label><span>ایران - خراسان رضوی - مشهد</span></li>
-                    <li><label>ایمیل</label><span class="word-wrap">JavadNasrollahi68@gmail.com</span></li>
-                    <li><label>تلفن</label><span>+98 935 562 1039</span></li>
-                    <li><label>تارنما</label><span class="word-wrap"><a
+                    <li><label>ایمیل</label><span class="word-wrap" dir="ltr">JavadNasrollahi68@gmail.com</span></li>
+                    <li><label>تلفن</label><span dir="ltr">+98 935 562 1039</span></li>
+                    <li><label>تارنما</label><span class="word-wrap" dir="ltr"><a
                                 href="https://javadnasrollahi.ir/">www.JavadNasrollahi.ir</a></span></li>
                 </ul>
                 <!-- /Personal info section -->
@@ -224,7 +216,6 @@
                     <!-- /Skills -->
                 </div>
                 <div class="clear"></div>
-                <!-- <a href="#" class="button transition">Download resume as PDF format</a> -->
             </section>
             <!-- /Resume -->
 
@@ -232,88 +223,22 @@
             <section id="portfolio">
                 <ul class="cats-filter" id="portfolio-filter">
                     <li><a href="" class="current transition" data-filter="*">All</a></li>
-                    <!-- <li><a href="" class="transition" data-filter=".webdesign">WebDesign</a></li>
-                        <li><a href="" class="transition" data-filter=".photoghraphy">Photoghraphy</a></li>
-                        <li><a href="" class="transition" data-filter=".illustration">Illustration</a></li>
-                        <li><a href="" class="transition" data-filter=".print">Print</a></li>
-                        <li><a href="" class="transition" data-filter=".animation">Animation</a></li> -->
                 </ul>
                 <div class="extra-text">برخی از پروژه های من: ...</div>
                 <ul id="portfolio-list">
-                    <!-- <li class="illustration print">
-                            <a href="portfolio/1.jpg" rel="portfolio[1]" title="Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet" class="folio">
-                                <img src="portfolio/1-thumb.jpg" alt="Image Title">
-                                <h2 class="title">Hello Goodbye</h2>
-                                <span class="categorie">Print / Illustration</span> 
-                            </a>
-                            <a href="portfolio/4.jpg" rel="portfolio[1]" title="This is the description" class="folio hidden"></a>
-                            <a href="portfolio/4.jpg" rel="portfolio[1]" title="This is the description" class="folio hidden"></a>
-                            <a href="portfolio/4.jpg" rel="portfolio[1]" title="This is the description" class="folio hidden"></a>
-                            <a href="portfolio/4.jpg" rel="portfolio[1]" title="This is the description" class="folio hidden"></a>
-                            <a href="portfolio/4.jpg" rel="portfolio[1]" title="This is the description" class="folio hidden"></a>
-                            <a href="portfolio/4.jpg" rel="portfolio[1]" title="This is the description" class="folio hidden"></a>
-                    	</li>
-                        <li class="webdesign">
-                            <a href="http://www.youtube.com/watch?v=qqXi8WmQ_WM" rel="portfolio" title="This is the description" class="folio">
-                                <img src="portfolio/3-thumb.jpg" alt="" >
-                                <h2 class="title">Snow time</h2>
-                                <span class="categorie">Webdesign</span> 
-                            </a>
-                    	</li>                        
-                        <li class="photoghraphy">
-                            <a href="http://www.google.com" target="_new">
-                                <img src="portfolio/2-thumb.jpg" alt="" >                            
-                                <h2 class="title">Help us</h2>
-                                <span class="categorie">Photography</span> 
-                            </a>
-                    	</li>
-                        <li class="animation print">
-                            <a href="portfolio/4.jpg" rel="portfolio" class="folio">
-                                <img src="portfolio/4-thumb.jpg" alt="" >
-                                <h2 class="title">Sunshine</h2>
-                                <span class="categorie">Print / Animation</span> 
-                            </a>
-                    	</li>
-                        <li class="animation">
-                            <a href="portfolio/5.jpg" rel="portfolio" class="folio">
-                                <img src="portfolio/5-thumb.jpg" alt="" >
-                                <h2 class="title">Come together</h2>
-                                <span class="categorie">Animation</span> 
-                            </a>
-                    	</li>
-                        <li class="webdesign print">
-                            <a href="portfolio/6.jpg" rel="portfolio" class="folio">
-                                <img src="portfolio/6-thumb.jpg" alt="" >
-                                <h2 class="title">The yellow</h2>
-                                <span class="categorie">Webdesign / Print</span> 
-                            </a>
-                    	</li>
-                        <li class="photoghraphy">
-                            <a href="portfolio/7.jpg" rel="portfolio" class="folio">
-                                <img src="portfolio/7-thumb.jpg" alt="" >
-                                <h2 class="title">Black bird</h2>
-                                <span class="categorie">Photoghraphy</span> 
-                            </a>
-                    	</li>
-                        <li class="illustration">
-                            <a href="portfolio/8.jpg" rel="portfolio" class="folio">
-                                <img src="portfolio/8-thumb.jpg" alt="" >
-                                <h2 class="title">Revolution</h2>
-                                <span class="categorie">Illustration</span> 
-                            </a>
-                    	</li> -->
                 </ul>
             </section>
             <!-- /Portfolio -->
 
             <!-- Contact -->
             <section id="contact">
-                <!-- <div id="map"></div> -->
                 <!-- Contact Info -->
                 <div class="contact-info">
-                    <h3 class="main-heading"><span>اطلاعات تماس/span></h3>
+                    <h3 class="main-heading"><span>اطلاعات تماس</span></h3>
                     <ul>
                         <li>ایران - خراسان رضوی - مشهد<br /><br /></li>
+                    </ul>
+                    <ul dir="ltr">
                         <li>Email: JavadNasrollahi68@gmail.com</li>
                         <li>Phone: +98 935 562 1039</li>
                         <li>Website: www.JavadNasrollahi.ir</li>
