--- a/ar.html
+++ b/ar.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <title>جواد نصراللهی</title>
+    <title>Javad Nasrollahi | جواد نصراللهي</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -23,6 +23,11 @@
     <script type="text/javascript" src="js/jquery.carouFredSel.js"></script>
     <script type="text/javascript" src="js/plugins.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
+    <style>
+    body{
+		font-family:Droid Arabic Kufi,'open Sans', Arial !important;
+    }
+    </style>
 </head>
 
 <body>
@@ -32,14 +37,14 @@
         <header>
             <!-- Logo -->
             <div id="logo">
-                <h2>جواد نصراللهی</h2>
-                <h4>برنامه نویس اندروید و وب</h4>
+                <h2>جواد نصراللهي</h2>
+                <h4>مبرمج و مطور أندرويد و الويب</h4>
             </div>
             <!-- /Logo -->
 
             <!-- Social Icons -->
             <ul class="socialicons">
-                <li class="socials-text">شبکه های اجتماعی</li>
+                <li class="socials-text">الشبكات الاجتماعية</li>
                 <li><a target="_blank" href="https://www.instagram.com/javadnasrollahi68/" class="transition"><i
                             class="fab fa-instagram"></i></a></li>
                 <li><a target="_blank" href="https://www.linkedin.com/in/javadnasrollahi68/" class="transition"><i
@@ -70,20 +75,20 @@
                                     width="153" /></li>
                         </ul>
                     </div>
-                    <h1>جواد نصراللهی</h1>
-                    <h3>برنامه نویس اندروید و وب</h3>
-                    <p>من یه معلم ایرانی ام که در کنار معلمی به صورت تجربی برنامه نویسی یادگرفتم.</p>
+                    <h1>جواد نصراللهي</h1>
+                    <h3>مبرمج و مطور أندرويد و الويب</h3>
+                    <p>أنا مدرس إيراني تعلم البرمجة إلى جانب التدريس.</p>
                 </div>
                 <!-- /About section -->
 
                 <!-- Personal info section -->
                 <ul class="personal-info" dir="rtl">
-                    <li><label>نام</label><span>جواد نصراللهی</span></li>
-                    <li><label>تاریخ تولد</label><span>12 تیر 1368</span></li>
-                    <li><label>آدرس</label><span>ایران - خراسان رضوی - مشهد</span></li>
-                    <li><label>ایمیل</label><span class="word-wrap" dir="ltr">JavadNasrollahi68@gmail.com</span></li>
-                    <li><label>تلفن</label><span dir="ltr">+98 935 562 1039</span></li>
-                    <li><label>تارنما</label><span class="word-wrap" dir="ltr"><a
+                    <li><label>اسم</label><span>جواد نصراللهي</span></li>
+                    <li><label>تاريخ الميلاد</label><span>03 يوليو  1989</span></li>
+                    <li><label>عنوان</label><span>إيران - محافظة خراسان رضوي - مشهد</span></li>
+                    <li><label>البريد</label><span class="word-wrap" dir="ltr">JavadNasrollahi68@gmail.com</span></li>
+                    <li><label>رقم الهاتف</label><span dir="ltr">+98 935 562 1039</span></li>
+                    <li><label>موقع</label><span class="word-wrap" dir="ltr"><a
                                 href="https://javadnasrollahi.ir/">www.JavadNasrollahi.ir</a></span></li>
                 </ul>
                 <!-- /Personal info section -->
@@ -93,10 +98,10 @@
             <!-- Menu -->
             <nav class="menu">
                 <ul class="tabs">
-                    <li class="tmenu"><a href="#profile" class="tab-profile"><i>&#x43;</i>درباره من</a></li>
-                    <li class="tmenu"><a href="#resume"><i>&#x3a;</i>رزومه</a></li>
-                    <li class="tmenu"><a href="#portfolio"><i>&#x38;</i>نمونه کارها</a></li>
-                    <li class="tmenu"><a href="#contact"><i>&#x21;</i>تماس با من</a></li>
+                    <li class="tmenu"><a href="#profile" class="tab-profile"><i>&#x43;</i>الملف الشخصي</a></li>
+                    <li class="tmenu"><a href="#resume"><i>&#x3a;</i>سيرة ذاتية</a></li>
+                    <li class="tmenu"><a href="#portfolio"><i>&#x38;</i>النموذج</a></li>
+                    <li class="tmenu"><a href="#contact"><i>&#x21;</i>اتصل</a></li>
                 </ul>
                 <a class="prev" id="menu-prev" href="#">&#xe073;</a>
                 <a class="next" id="menu-next" href="#">&#xe076;</a>
@@ -108,21 +113,21 @@
             <section id="resume">
                 <div class="timeline-section">
                     <!-- Timeline for Employment  -->
-                    <h3 class="main-heading">سابقه کار</h3>
+                    <h3 class="main-heading">سيرة ذاتية</h3>
                     <ul class="timeline">
                         <li>
 
                             <div class="timelineUnit">
-                                <h4>مدیر و برنامه نویس<span class="timelineDate">از سال 1397 تا کنون</span></h4>
-                                <h5>شرکت آراموز</h5>
+                                <h4>مدير ومطور<span class="timelineDate">2018 حتي الآن</span></h4>
+                                <h5>شركة آراموز</h5>
                                 <p></p>
                             </div>
                         </li>
                         <li>
 
                             <div class="timelineUnit">
-                                <h4>دبیر<span class="timelineDate">از سال 1386 تا کنون</span></h4>
-                                <h5>وزارت آموزش و پرورش</h5>
+                                <h4>المدرس<span class="timelineDate">2007 حتي الآن</span></h4>
+                                <h5>وزارة التربية التعليم</h5>
                                 <p></p>
                             </div>
                         </li>
@@ -131,13 +136,13 @@
                     <!-- /Timeline for Employment  -->
 
                     <!-- Timeline for Education  -->
-                    <h3 class="main-heading">تحصیلات</h3>
+                    <h3 class="main-heading">التعليم</h3>
                     <ul class="timeline">
 
                         <li>
                             <div class="timelineUnit">
-                                <h4>کارشناسی ارشد مترجمی زبان عربی<span class="timelineDate">1392-1394</span></h4>
-                                <h5>دانشگاه فردوسی مشهد</h5>
+                                <h4>ماجستير في اللغة العربية<span class="timelineDate">2013-2015</span></h4>
+                                <h5>جامعة الفردوسي في مشهد</h5>
                                 <p></p>
                             </div>
                         </li>
@@ -145,16 +150,16 @@
 
                         <li>
                             <div class="timelineUnit">
-                                <h4>کارشناسی زبان و ادبیات عرب<span class="timelineDate">1388-1392</span></h4>
-                                <h5>دانشگاه فردوسی مشهد</h5>
+                                <h4>بكالوريوس في اللغة العربية<span class="timelineDate">2009-2013</span></h4>
+                                <h5>جامعة الفردوسي في مشهد</h5>
                                 <p></p>
                             </div>
                         </li>
 
                         <li>
                             <div class="timelineUnit">
-                                <h4>کاردانی دینی و عربی<span class="timelineDate">1386-1388</span></h4>
-                                <h5>دانشگاه فرهنگیان شهید بهشتی مشهد</h5>
+                                <h4>خبرة في الشريعة و اللغة العربية<span class="timelineDate">2007-2009</span></h4>
+                                <h5>جامعة اعداد المعلين شهيد بهشتي مشهد</h5>
                                 <p></p>
                             </div>
                         </li>
@@ -164,7 +169,7 @@
                 </div>
                 <div class="skills-section">
                     <!-- Skills -->
-                    <h3 class="main-heading">مهارت گرافیکی</h3>
+                    <h3 class="main-heading">مهارات الرسومات والوسائط</h3>
                     <ul class="skills">
                         <li>
                             <h4>Photoshop</h4>
@@ -173,7 +178,7 @@
                         </li>
                     </ul>
 
-                    <h3 class="main-heading">مهارت برنامه نویسی</h3>
+                    <h3 class="main-heading">مهارات البرمجة</h3>
                     <ul class="skills">
 
 
@@ -202,7 +207,7 @@
                             <div class="rating" data-rat="4"></div>
                         </li>
                     </ul>
-                    <h3 class="main-heading">مهارت طراحی بانک های اطلاعاتی</h3>
+                    <h3 class="main-heading">مهارات تصميم قواعد البيانات</h3>
                     <ul class="skills">
                         <li>
                             <h4>Sql/Mysql</h4>
@@ -224,7 +229,7 @@
                 <ul class="cats-filter" id="portfolio-filter">
                     <li><a href="" class="current transition" data-filter="*">All</a></li>
                 </ul>
-                <div class="extra-text">برخی از پروژه های من: ...</div>
+                <div class="extra-text">بعض المشاريع التي أفتخر بها: ...</div>
                 <ul id="portfolio-list">
                 </ul>
             </section>
@@ -234,9 +239,9 @@
             <section id="contact">
                 <!-- Contact Info -->
                 <div class="contact-info">
-                    <h3 class="main-heading"><span>اطلاعات تماس</span></h3>
+                    <h3 class="main-heading"><span>معلومات الاتصال</span></h3>
                     <ul>
-                        <li>ایران - خراسان رضوی - مشهد<br /><br /></li>
+                        <li>إيران - محافظة خراسان رضوي - مشهد<br /><br /></li>
                     </ul>
                     <ul dir="ltr">
                         <li>Email: JavadNasrollahi68@gmail.com</li>
@@ -248,22 +253,22 @@
 
                 <!-- Contact Form -->
                 <div class="contact-form">
-                    <h3 class="main-heading"><span>فرم تماس</span></h3>
+                    <h3 class="main-heading"><span>لنبقى على تواصل</span></h3>
                     <div id="contact-status"></div>
                     <form action="" id="contactform">
                         <p>
-                            <label for="name">نام شما</label>
+                            <label for="name">اسم</label>
                             <input type="text" name="name" class="input">
                         </p>
                         <p>
-                            <label for="email">ایمیل شما</label>
+                            <label for="email">البريد الالكتروني</label>
                             <input type="text" name="email" class="input">
                         </p>
                         <p>
-                            <label for="message">متن پیام شما</label>
+                            <label for="message">رسالتك</label>
                             <textarea name="message" cols="88" rows="6" class="textarea"></textarea>
                         </p>
-                        <input type="submit" name="submit" value="ارسال" class="button transition">
+                        <input type="submit" name="submit" value="إرسال" class="button transition">
                     </form>
                 </div>
                 <!-- /Contact Form -->
